tests/reference/asr-bindc_10e-8b10394.stderr
semantic error: The struct in c_p_pointer must be C interoperable
 --> tests/errors/bindc_10e_mod.py:5:1 - 7:10
  |
5 |    class S:
  |    ^^^^^^^^...
...
  |
7 |        b: i64
  | ...^^^^^^^^^^ not C interoperable
  |
5 |    class S:
  |    ~~~~~~~~...
...
  |
7 |        b: i64
  | ...~~~~~~~~~~ help: add the @ccallable decorator to this struct to make it C interoperable
